<resources>

    <string name="app_name" translatable="false">Gatherer</string>
    <string name="about_emoticons" translatable="false">🌳🌳🍄🌳🌳</string>

    <string name="everything_about_mushrooms">Wszystko o grzybach dla wszyskich!</string>
    <string name="sign_in">Zaloguj</string>
    <string name="sign_up">Zarejestruj</string>

    <string name="login_text">Logowanie\n 🍄👀</string>
    <string name="registration_text">Rejestracja\n🌲🌲🚶</string>
    <string name="name">Nazwa</string>
    <string name="email">Email</string>
    <string name="password">Hasło</string>

    <string name="authentication_failed">Autentykacja nie powiodła się</string>
    <string name="user_created">Konto zostało utworzone</string>

    <string name="empty_email">Pole email nie może być puste</string>
    <string name="sign_in_empty_password_or_email">Email oraz hasło nie mogą być puste</string>
    <string name="sign_in_success">Autentykacja powiodła się</string>

    <string name="password_reset">Reset hasła</string>
    <string name="reset_password">Zresetuj hasło</string>
    <string name="mail_with_reseted_password">Mail z resetem hasła został wysłany na podany adres email</string>
    <string name="wrong_email">Podano zły email</string>

    <string name="exit">Zamknij</string>
    <string name="name_surname">Name/Surname</string>
    <string name="write_post">Napisz post...</string>
    <string name="mushroom_name">Mushroom Name</string>

    <string name="open">Open</string>
    <string name="close">Close</string>

</resources>