<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/dialog_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingTop="24dp"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:paddingBottom="4dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:src="@drawable/person_outline_24px"
            app:tint="@color/md_theme_light_secondary"
            />

        <TextView
            android:id="@+id/user_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password_reset"
            android:gravity="center"
            android:textSize="24sp"
            android:layout_marginBottom="16dp"
            android:textColor="@color/md_theme_dark_background" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            app:endIconDrawable="@drawable/ic_cancel_24px"
            app:endIconMode="clear_text"
            app:placeholderText="Email"
            style="@style/Widget.Material3.TextInputLayout.FilledBox"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/reset_password"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:layout_marginEnd="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            style="@style/Widget.Material3.Button.TextButton.Dialog"
            android:text="@string/reset_password"
            android:visibility="visible"
            />

        <Button
            android:id="@+id/exit"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:layout_marginEnd="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            style="@style/Widget.Material3.Button.TextButton.Dialog"
            android:text="@string/exit"
            android:visibility="gone"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>